--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "dev": "nodemon -e js,hbs src"
+    "dev": "nodemon -e js,hbs src",
+    "build": "npm install --production"
   },
   "keywords": [],
   "author": "Codesavvy",
@@ -24,7 +25,6 @@
     "mongodb": "^6.13.1",
     "mongoose": "^8.10.1",
     "nodemailer": "^6.10.0",
-    "nodemon": "^3.1.9",
-    "sweetalert2": "^11.17.2"
+    "nodemon": "^3.1.9"
   }
 }
