--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
     "version": 2,
     "builds": [{ "src": "src/index.js", "use": "@vercel/node" }],
-    "routes": [{ "src": "/(.*)", "dest": "/src/index.js" }]
+    "routes": [
+        { "src": "/Bloom_Together/(.*)", "dest": "/src/index.js" },
+        { "src": "/(.*)", "dest": "/src/index.js" }
+    ]
 }
